2023-02-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3249.c:
	  Do not test non-intrinsic named address space areas for mcs51, as DATA is overwritten by stack there.

2023-01-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCglue.c:
	  Fix bug #2837 for z80 and related.

2023-01-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3025.c,
	  support/regression/cases/Makefile.in,
	  Fix bug #3025.
	* src/mos6502/peeph.def:
	  Disable a rule that uses not-yet-implemented notUsed.
	* src/pdk/gen.c:
	  Fix a pdk issue similar to mcs51 bug #3023.
	* src/SDCC.y,
	  device/lib/printf_large.c,
	  device/lib/printfl.c,
	  device/lib/sprintf.c,
	  device/lib/vprintf.c:
	  Fix bug #3497.
	* src/z80/gen.c,
	  support/regression/tests/bug-3249.c:
	  Fix bug #3249.
	* support/regression/tests/inline.c:
	  Disable a test for host, which fails on GNU/Linux on aarch64 using GCC 12.2.
	* src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h:
	  Fix error message test for empty translation units.

2023-01-29 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/float.h,
	  device/lib/_divsint.c,
	  device/lib/_divslong.c,
	  device/lib/_divslonglong.c,
	  device/lib/_divuint.c,
	  device/lib/_divulong.c,
	  device/lib/_divulonglong.c,
	  device/lib/_modsint.c,
	  device/lib/_modslong.c,
	  device/lib/_modslonglong.c,
	  device/lib/_moduint.c,
	  device/lib/_modulong.c,
	  device/lib/_modulonglong.c,
	  device/lib/_mulint.c,
	  device/lib/_mullong.c,
	  device/lib/_mullonglong.c,
	  device/lib/_rlslonglong.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rrulonglong.c,
	  device/lib/_slonglong2fs.c,
	  device/lib/_ulonglong2fs.c:
	  Add conditional `__nonbanked` to fix mcs51 library build.

2023-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/ds390/gen.c,
	  src/mcs51/gen.c,